--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
         <div class="fif-cont bg-bgrey d-flex flex-col justify-center">
             <div class="">
+                <img class="bg-img2 justify-end" src="./assets/images/s.webp" alt="">
                 <h1 class="justify-center text-white big-font pt-3 text-center"><span class="bn-text">Salt'n
                         Pepper</span></h1>
                 <h1 class="text-white resfran text-center">Restaurant Franchises</h1>
