--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                             class="rest"> Restaurant </span></h1>
                     <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-location-dot"></i></span> Plot# 55,
                         Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                    <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
+                    <p class="text-grey add-ph pt-1"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
                     </p>
                     <div class="pt-5"><button class=" bg-bgrey " id="getdir-btn"><a href="" class=" text-none text-white">Get directions
                         <span id="arrow" class=""><i class="fa-solid fa-arrow-right"></i></span> </a></button></div>
                 </div>
                 <img class="mt-5 fif-contimg" src="./assets/images/franimg1.webp" alt="">
             </div>
-            <div class=" d-flex justify-around align-start flex-rowrev gap-9 pt-4">
-                <div class="  align-start mt-5">
+            <div class=" d-flex justify-center gap-5 faisal flex-rowrev  pt-4">
+                <div class="align-start mt-5">
                     <p><span class="city-name text-red">FAISALABAD</span></p>
                     <h1 class="text-white"><span class="big-font align-start sbn bn-text">Salt'n Pepper </span><span
                             class="rest"> Restaurant </span></h1>
                     <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-location-dot"></i></span> Plot# 55,
                         Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                    <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
+                    <p class="text-grey add-ph pt-1"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
                     </p>
                     <div class="pt-5"><button class=" bg-bgrey " id="getdir-btn"><a href="" class=" text-none text-white">Get directions
                         <span id="arrow" class=""><i class="fa-solid fa-arrow-right"></i></span> </a></button></div>
@@ -92,7 +92,7 @@
                             class="rest"> Restaurant </span></h1>
                     <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-location-dot"></i></span> Plot# 55,
                         Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                    <p class="text-grey add-ph pt-2"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
+                    <p class="text-grey add-ph pt-1"> <span><i class="fa-solid fa-phone"></i></span> Ph: 051-2604904-6
                     </p>
                     <div class="pt-5"><button class=" bg-bgrey " id="getdir-btn"><a href="" class=" text-none text-white">Get directions
                         <span id="arrow" class=""><i class="fa-solid fa-arrow-right"></i></span> </a></button></div>
